backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: coffee-shop-coders
spec:
  replicas: 2
  selector:
    matchLabels:
      app: coffee-shop-coders
  template:
    metadata:
      labels:
        app: coffee-shop-coders
    spec:
      containers:
      - name: backend
        image: 731436112197.dkr.ecr.us-east-1.amazonaws.com/coffeeshopcoders:coffee-shop-coders-backend-latest
        ports:
        - containerPort: 5000
      imagePullSecrets:
        - name: regcred
