frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: coffee-shop-coders
spec:
  replicas: 2
  selector:
    matchLabels:
      app: coffee-shop-coders
  template:
    metadata:
      labels:
        app: coffee-shop-coders
    spec:
      containers:
      - name: frontend
        image: 731436112197.dkr.ecr.us-east-1.amazonaws.com/coffeeshopcoders:coffee-shop-coders-frontend-latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
      imagePullSecrets:
        - name: regcred
